--- a/systemharden.html
+++ b/systemharden.html
@@ -16,12 +16,14 @@
     </title>
 </head>
 <body>
-    <div class="container-fluid">
-        <div class="row">
+    <div class="container-fluid text-center">
+        <div class="row image text-center"></div>
+        <div class="row header">
             <h1>WELCOME TO SYSTEM HARDENING</h1>
         </div>
         <div class="row">
-            <button>About</button><button>Social Engineering</button><button>Software Hardening</button><button>Netwrok Hardening</button><button>User Training</button>
+            <button>About</button><button>Social Engineering</button><button>Software Hardening</button><button>Network Hardening</button><button>User Training</button>
         </div>
     </div>
 </body>
+</html>
