--- a/systemharden.html
+++ b/systemharden.html
@@ -17,11 +17,11 @@
 </head>
 <body>
     <div class="container-fluid text-center">
-        <div class="row image text-center"></div>
+        <div class="row image"></div>
         <div class="row header">
             <h1>WELCOME TO SYSTEM HARDENING</h1>
         </div>
-        <div class="row">
+        <div class="row button">
             <button>About</button><button>Social Engineering</button><button>Software Hardening</button><button>Network Hardening</button><button>User Training</button>
         </div>
     </div>
