--- a/systemharden.html
+++ b/systemharden.html
@@ -31,7 +31,7 @@
                     </button>
                     <a class="navbar-brand" href="#">Navigation:</a>
                 </div>
-                <div class="collapse navbar-collapse" align="center" id="myNavbar">
+                <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
                         <li class="buttons button"><button class="btn navbar-btn" data-link="about">About</button></li>
                         <li class="buttons button"><button class="btn navbar-btn" data-link="socEng">Social Engineering</button></li>
@@ -59,11 +59,171 @@
     </div>
 
     <div id="hiddenDivs" style="display:none;">
-        <div class="info" id="about"><div class="text-center"><h2>Hello to about page</h2></div></div>
-        <div class="info" id="socEng"><div><h2>This social engineering</h2></div></div>
-        <div class="info" id="softHard"><div></div></div>
-        <div class="info" id="netHard"><div></div></div>
-        <div class="info" id="userTrain"><div></div></div>
+        <div class="info" id="about">
+            <div class="slideshow-container">
+
+                <div class="mySlides faded">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Text</div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">2 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Two</div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Three</div>
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+            </div>
+            <br>
+
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+        </div>
+        <div class="info" id="socEng">
+            <div class="slideshow-container">
+
+                <div class="mySlides faded">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Text</div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">2 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Two</div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Three</div>
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+            </div>
+            <br>
+
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+        </div>
+        <div class="info" id="softHard">
+            <div class="slideshow-container">
+
+                <div class="mySlides faded">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Text</div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">2 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Two</div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Three</div>
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+            </div>
+            <br>
+
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+        </div>
+        <div class="info" id="netHard">
+            <div class="slideshow-container">
+
+                <div class="mySlides faded">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Text</div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">2 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Two</div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Three</div>
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+            </div>
+            <br>
+
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+        </div>
+        <div class="info" id="userTrain">
+            <div class="slideshow-container">
+
+                <div class="mySlides faded">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Text</div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">2 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Two</div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <div class="text">Caption Three</div>
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+            </div>
+            <br>
+
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+        </div>
     </div>
 </body>
 </html>
