--- a/systemharden.html
+++ b/systemharden.html
@@ -64,19 +64,19 @@
 
                 <div class="mySlides faded">
                     <div class="numbertext">1 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">2 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Two</div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">3 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
 
@@ -97,19 +97,19 @@
 
                 <div class="mySlides faded">
                     <div class="numbertext">1 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">2 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Two</div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">3 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
 
@@ -130,19 +130,19 @@
 
                 <div class="mySlides faded">
                     <div class="numbertext">1 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">2 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Two</div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">3 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
 
@@ -163,19 +163,19 @@
 
                 <div class="mySlides faded">
                     <div class="numbertext">1 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">2 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Two</div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">3 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
 
@@ -196,19 +196,19 @@
 
                 <div class="mySlides faded">
                     <div class="numbertext">1 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">2 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Two</div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">3 / 3</div>
-                    <img src="/Project1/mexican-wolf-trance.github.io/img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" style="width:100%">
                     <div class="text">Caption Three</div>
                 </div>
 
