--- a/systemharden.html
+++ b/systemharden.html
@@ -29,7 +29,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Navigation:</a>
+                    <a class="navbar-brand" href="#start">Navigation:</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
@@ -54,9 +54,11 @@
             <button>About</button><button>Social Engineering</button><button>Software Hardening</button><button>Network Hardening</button><button>User Training</button>
         </div>-->
     </div>
-    <div id="info">
+        <section id="start">
+            <div id="info">
 
-    </div>
+            </div>
+        </section>
 
     <div id="hiddenDivs" style="display:none;">
         <div class="info" id="about">
@@ -129,21 +131,104 @@
             <div class="slideshow-container">
 
                 <div class="mySlides faded">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
+                    <div class="numbertext">1 / 5</div>
+                    <div class="slide">
+                        <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
+                        <ul>
+                            <li class="size">
+                                Use the policies settings provided by the system
+                            </li>
+                            <li class="size">
+                                Patch System: security hot-fix, patch, service pack
+                            </li>
+                            <li class="size">
+                                Password protection: passwords must be longer than 12 character and everything within the system must have a unique password
+                            </li>
+                        </ul>
+                    </div>
                     <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides faded">
-                    <div class="numbertext">2 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Two</div>
+                    <div class="numbertext">2 / 5</div>
+                    <div class="slide">
+                        <h1 class="text-center">BIOS settings<br /></h1>
+                        <ul>
+                            <li class="size">
+                                Contains the BIOS code AKA CMOS setup program, which is a program used to configure hardware settings the system
+                            </li>
+                            <li class="size">
+                                CMOS: it is a security best practice to ensure that systems can boot only from the local hard disk and not from the network card, USB drive or CD/DVD-ROM to boot an OS into memory and gain access to the system.
+                            </li>
+                            <li class="size">
+                                Ensure CMOS is configured to only allow booting from hard disk with user ID and password (must be separate from windows password)
+                            </li>
+                            <li class="size">
+                                Use CMOS setup program to disable unnecessary ports
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides faded">
-                    <div class="numbertext">3 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
+                    <div class="numbertext">3 / 5</div>
+                    <div class="slide">
+                        <h1 class="text-center">USB drives<br /></h1>
+                        <ul>
+                            <li class="size">
+                                USB drives make it easy for employees to take a copy of data with them on a flash drive
+                            </li>
+                            <li class="size">
+                                USB drives owned by employees could contain a virus brought in from the outside by the employee and then is replicated inside the organization's network
+                            </li>
+                            <li class="size">
+                                USB ports can be disabled in CMOS startup program
+                            </li>
+                            <li class="size">
+                                USB drives owned by employees could contain a virus brought in from the outside by the employee and then is replicated inside the organization's network
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">4 / 5</div>
+                    <div class="slide">
+                        <h1 class="text-center">Removeable storage<br /></h1>
+                        <ul>
+                            <li class="size">
+                                Any storage medium that can store data and them be removed from the system such as USB flash drive, FireWire, eSATA, external hard drive
+                            </li>
+                            <li class="size">
+                                Removable Storage can transport worm viruses from the outside to inside the organization's network
+                            </li>
+                            <li class="size">
+                                Company supplied removable storage should be encrypted in case the employee loses the device
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">5 / 5</div>
+                    <div class="slide">
+                        <h1 class="text-center">OS hardening<br /></h1>
+                        <ul>
+                            <li class="size">
+                                The process of removing unnecessary features of the operating system, disabling unnecessary service and removing unnecessary accounts to reduce attack surface
+                            </li>
+                            <li class="size">
+                                Uninstall any unnecessary software from the system
+                            </li>
+                            <li class="size">
+                                A system should be reformatted and a fresh install of the OS applied either manually or through an image
+                            </li>
+                            <li class="size">
+                                Disable Print Spooler Service, Workstation service, Server service, messenger service
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -156,6 +241,8 @@
                 <span class="dot" onclick="currentSlide(1)"></span>
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
+                <span class="dot" onclick="currentSlide(5)"></span>
             </div>
         </div>
         <div class="info" id="netHard">
