add image behind slideshow

--- a/systemharden.html
+++ b/systemharden.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="us_EN">
 <head>
@@ -24,20 +24,21 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#start">Navigation:</a>
+                    <a class="navbar-brand" href="#start">Navigation</a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav">
-                        <li class="buttons button"><button class="btn navbar-btn" data-link="about">About</button></li>
-                        <li class="buttons button"><button class="btn navbar-btn" data-link="socEng">Social Engineering</button></li>
-                        <li class="buttons button"><button class="btn navbar-btn"data-link="softHard">Software Hardening</button></li>
-                        <li class="buttons button"><button class="btn navbar-btn"data-link="netHard">Network Hardening</button></li>
-                        <li class="buttons button"><button class="btn navbar-btn"data-link="userTrain">User Training</button></li>
+                        <li class="buttons button"><button type="button" class="btn navbar-btn" data-link="about">About</button></li>
+                        <li class="buttons button"><button type="button" class="btn navbar-btn" data-link="socEng">Social Engineering</button></li>
+                        <li class="buttons button"><button type="button" class="btn navbar-btn" data-link="softHard">Software Hardening</button></li>
+                        <li class="buttons button"><button type="button" class="btn navbar-btn" data-link="netHard">Network Hardening</button></li>
+                        <li class="buttons button"><button type="button" class="btn navbar-btn" data-link="userTrain">User Training</button></li>
                     </ul>
                 </div>
             </div>
@@ -55,7 +56,7 @@
         </div>-->
     </div>
         <section id="start">
-            <div id="info">
+            <div class="image2" id="info">
 
             </div>
         </section>
@@ -133,7 +134,7 @@
                 <div class="mySlides faded">
                     <div class="numbertext">1 / 5</div>
                     <div class="slide">
-                        <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
+                        <h1 class="text-center">SOFTWARE HARDENING<br /><br /></h1>
                         <ul>
                             <li class="size">
                                 Use the policies settings provided by the system
@@ -152,7 +153,7 @@
                 <div class="mySlides faded">
                     <div class="numbertext">2 / 5</div>
                     <div class="slide">
-                        <h1 class="text-center">BIOS settings<br /></h1>
+                        <h1 class="text-center">BIOS settings<br /><br /></h1>
                         <ul>
                             <li class="size">
                                 Contains the BIOS code AKA CMOS setup program, which is a program used to configure hardware settings the system
@@ -174,7 +175,7 @@
                 <div class="mySlides faded">
                     <div class="numbertext">3 / 5</div>
                     <div class="slide">
-                        <h1 class="text-center">USB drives<br /></h1>
+                        <h1 class="text-center">USB drives<br /><br /></h1>
                         <ul>
                             <li class="size">
                                 USB drives make it easy for employees to take a copy of data with them on a flash drive
@@ -195,7 +196,7 @@
                 <div class="mySlides faded">
                     <div class="numbertext">4 / 5</div>
                     <div class="slide">
-                        <h1 class="text-center">Removeable storage<br /></h1>
+                        <h1 class="text-center">Removeable storage<br /><br /></h1>
                         <ul>
                             <li class="size">
                                 Any storage medium that can store data and them be removed from the system such as USB flash drive, FireWire, eSATA, external hard drive
@@ -213,7 +214,7 @@
                 <div class="mySlides faded">
                     <div class="numbertext">5 / 5</div>
                     <div class="slide">
-                        <h1 class="text-center">OS hardening<br /></h1>
+                        <h1 class="text-center">OS hardening<br /><br /></h1>
                         <ul>
                             <li class="size">
                                 The process of removing unnecessary features of the operating system, disabling unnecessary service and removing unnecessary accounts to reduce attack surface
