changes slideshow format a bit, and changed background behind slideshow

--- a/systemharden.html
+++ b/systemharden.html
@@ -134,7 +134,8 @@
                 <div class="mySlides faded">
                     <div class="numbertext">1 / 5</div>
                     <div class="slide">
-                        <h1 class="text-center">SOFTWARE HARDENING<br /><br /></h1>
+                        <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
+                        <h2 class="text-center">INTRO<br /></h2>
                         <ul>
                             <li class="size">
                                 Use the policies settings provided by the system
@@ -153,7 +154,8 @@
                 <div class="mySlides faded">
                     <div class="numbertext">2 / 5</div>
                     <div class="slide">
-                        <h1 class="text-center">BIOS settings<br /><br /></h1>
+                        <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
+                        <h1 class="text-center">BIOS settings<br /></h1>
                         <ul>
                             <li class="size">
                                 Contains the BIOS code AKA CMOS setup program, which is a program used to configure hardware settings the system
@@ -175,7 +177,8 @@
                 <div class="mySlides faded">
                     <div class="numbertext">3 / 5</div>
                     <div class="slide">
-                        <h1 class="text-center">USB drives<br /><br /></h1>
+                        <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
+                        <h1 class="text-center">USB drives<br /></h1>
                         <ul>
                             <li class="size">
                                 USB drives make it easy for employees to take a copy of data with them on a flash drive
@@ -196,7 +199,8 @@
                 <div class="mySlides faded">
                     <div class="numbertext">4 / 5</div>
                     <div class="slide">
-                        <h1 class="text-center">Removeable storage<br /><br /></h1>
+                        <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
+                        <h1 class="text-center">Removeable storage<br /></h1>
                         <ul>
                             <li class="size">
                                 Any storage medium that can store data and them be removed from the system such as USB flash drive, FireWire, eSATA, external hard drive
@@ -214,7 +218,8 @@
                 <div class="mySlides faded">
                     <div class="numbertext">5 / 5</div>
                     <div class="slide">
-                        <h1 class="text-center">OS hardening<br /><br /></h1>
+                        <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
+                        <h1 class="text-center">OS hardening<br /></h1>
                         <ul>
                             <li class="size">
                                 The process of removing unnecessary features of the operating system, disabling unnecessary service and removing unnecessary accounts to reduce attack surface
