--- a/systemharden.html
+++ b/systemharden.html
@@ -135,7 +135,7 @@
                     <div class="numbertext">1 / 5</div>
                     <div class="slide">
                         <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
-                        <h2 class="text-center">INTRO<br /></h2>
+                        <h2 class="text-center">Introduction<br /><br /></h2>
                         <ul>
                             <li class="size">
                                 Use the policies settings provided by the system
@@ -155,7 +155,7 @@
                     <div class="numbertext">2 / 5</div>
                     <div class="slide">
                         <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
-                        <h1 class="text-center">BIOS settings<br /></h1>
+                        <h1 class="text-center">BIOS settings<br /><br /></h1>
                         <ul>
                             <li class="size">
                                 Contains the BIOS code AKA CMOS setup program, which is a program used to configure hardware settings the system
@@ -178,7 +178,7 @@
                     <div class="numbertext">3 / 5</div>
                     <div class="slide">
                         <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
-                        <h1 class="text-center">USB drives<br /></h1>
+                        <h1 class="text-center">USB drives<br /><br /></h1>
                         <ul>
                             <li class="size">
                                 USB drives make it easy for employees to take a copy of data with them on a flash drive
@@ -200,7 +200,7 @@
                     <div class="numbertext">4 / 5</div>
                     <div class="slide">
                         <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
-                        <h1 class="text-center">Removeable storage<br /></h1>
+                        <h1 class="text-center">Removeable storage<br /><br /></h1>
                         <ul>
                             <li class="size">
                                 Any storage medium that can store data and them be removed from the system such as USB flash drive, FireWire, eSATA, external hard drive
@@ -219,7 +219,7 @@
                     <div class="numbertext">5 / 5</div>
                     <div class="slide">
                         <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
-                        <h1 class="text-center">OS hardening<br /></h1>
+                        <h1 class="text-center">OS hardening<br /><br /></h1>
                         <ul>
                             <li class="size">
                                 The process of removing unnecessary features of the operating system, disabling unnecessary service and removing unnecessary accounts to reduce attack surface
@@ -289,20 +289,52 @@
 
                 <div class="mySlides faded">
                     <div class="numbertext">1 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Text</div>
+                    <div class="slide">
+                        <h1 class="text-center">USER TRAINING<br /></h1>
+                        <div class="xkcd"></div>
+                    </div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">2 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Two</div>
+                    <div class="slide">
+                        <h1 class="text-center">USER TRAINING<br /></h1>
+                        <h1 class="text-center">User awareness<br /><br /></h1>
+                        <ul>
+                            <li class="size margin">
+                                What it is<br /><br />
+                            </li>
+                            <li class="size margin">
+                                Why it is important
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">2 / 3</div>
+                    <div class="slide">
+                        <h1 class="text-center">USER TRAINING<br /></h1>
+                        <h1 class="text-center">What to keep an eye out for<br /><br /></h1>
+                        <ul>
+                            <li class="size margin">
+                                Phone attacks
+                            </li>
+                            <li class="size margin">
+                                Direct attacks
+                            </li>
+                            <li class="size margin">
+                                Online attacks
+                            </li>
+                        </ul>
+                        <h1 class="text-center">How to prevent them</h1>
+                    </div>
                 </div>
 
                 <div class="mySlides faded">
                     <div class="numbertext">3 / 3</div>
+                    <div class="questions"><h1 class="text-center">QUESTIONS?</h1></div>
                     <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
                 </div>
 
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
