--- a/systemharden.html
+++ b/systemharden.html
@@ -155,7 +155,7 @@
                     <div class="numbertext">2 / 5</div>
                     <div class="slide">
                         <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
-                        <h1 class="text-center">BIOS settings<br /><br /></h1>
+                        <h1 class="text-center">BIOS settings<br /></h1>
                         <ul>
                             <li class="size">
                                 Contains the BIOS code AKA CMOS setup program, which is a program used to configure hardware settings the system
@@ -288,7 +288,7 @@
             <div class="slideshow-container">
 
                 <div class="mySlides faded">
-                    <div class="numbertext">1 / 3</div>
+                    <div class="numbertext">1 / 4</div>
                     <div class="slide">
                         <h1 class="text-center">USER TRAINING<br /></h1>
                         <div class="xkcd"></div>
@@ -296,7 +296,7 @@
                 </div>
 
                 <div class="mySlides faded">
-                    <div class="numbertext">2 / 3</div>
+                    <div class="numbertext">2 / 4</div>
                     <div class="slide">
                         <h1 class="text-center">USER TRAINING<br /></h1>
                         <h1 class="text-center">User awareness<br /><br /></h1>
@@ -312,7 +312,7 @@
                 </div>
 
                 <div class="mySlides faded">
-                    <div class="numbertext">2 / 3</div>
+                    <div class="numbertext">3 / 4</div>
                     <div class="slide">
                         <h1 class="text-center">USER TRAINING<br /></h1>
                         <h1 class="text-center">What to keep an eye out for<br /><br /></h1>
@@ -332,9 +332,9 @@
                 </div>
 
                 <div class="mySlides faded">
-                    <div class="numbertext">3 / 3</div>
+                    <div class="numbertext">4 / 4</div>
                     <div class="questions"><h1 class="text-center">QUESTIONS?</h1></div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
+                    <img src="img/cybersecu.jpg" class="center">
                 </div>
 
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -347,6 +347,7 @@
                 <span class="dot" onclick="currentSlide(1)"></span>
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
             </div>
         </div>
     </div>
