fixed more spacing issues

--- a/systemharden.html
+++ b/systemharden.html
@@ -155,7 +155,7 @@
                     <div class="numbertext">2 / 5</div>
                     <div class="slide">
                         <h1 class="text-center">SOFTWARE HARDENING<br /></h1>
-                        <h1 class="text-center">BIOS settings<br /></h1>
+                        <h1 class="text-center">BIOS settings<br /><br /></h1>
                         <ul>
                             <li class="size">
                                 Contains the BIOS code AKA CMOS setup program, which is a program used to configure hardware settings the system
