--- a/systemharden.html
+++ b/systemharden.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="syshard.css">
+    <link href="https://fonts.googleapis.com/css?family=Butcherman" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="syshard.js"></script>
 
@@ -19,7 +20,7 @@
     <div class="container-fluid text-center">
         <div class="row image"></div>
         <div class="row header">
-            <h1>WELCOME TO SYSTEM HARDENING</h1>
+            <h1>SYSTEM HARDENING</h1>
         </div>
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
@@ -57,7 +58,11 @@
     </div>
         <section id="start">
             <div class="image2" id="info">
-
+                <div class="slide">
+                    <h1 class="text-center">Welcome to our presention about system hardening.</h1>
+                    <h2 class="text-center">Please enjoy</h2>
+                    <img src="img/cybersecu.jpg" class="center">
+                </div>
             </div>
         </section>
 
@@ -66,54 +71,90 @@
             <div class="slideshow-container">
 
                 <div class="mySlides faded">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Text</div>
+                    <div class="numbertext">1 / 1</div>
+                    <div class="slide">
+                        <h1 class="text-center">ABOUT<br /><br /></h1>
+                        <ul>
+                            <li class="size">
+                                Miguel Delgado - US Army Ret., IS Major
+                            </li>
+                            <li class="size">
+                                Nicholas Lin - Currently a field technician, IS Major
+                            </li>
+                            <li class="size">
+                                Kenny Yn - Current student, IS Major
+                            </li>
+                            <li class="size">
+                                Cho Cheong Ng - Current student, IS Major
+                            </li>
+                            <li class="size">
+                                Charles Wyatt - M.A. Criminology, MP US Army, CS Major
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-
-                <div class="mySlides faded">
-                    <div class="numbertext">2 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Two</div>
-                </div>
-
-                <div class="mySlides faded">
-                    <div class="numbertext">3 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
-                </div>
-
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
             </div>
             <br>
 
             <div style="text-align:center">
                 <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
             </div>
         </div>
         <div class="info" id="socEng">
             <div class="slideshow-container">
 
                 <div class="mySlides faded">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Text</div>
+                    <div class="numbertext">1 / 4</div>
+                    <div class="slide">
+                        <h1 class="text-center">SOCIAL ENGINEERING<br /></h1>
+                        <h1 class="text-center">What is social engineering?<br /><br /></h1>
+                        <ul>
+                            <li class="size">
+                                Manipulating, influencing, or deceiving you in order gain control over your computer system
+                            </li>
+                            <li class="size">
+                                Psychological
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="mySlides faded">
-                    <div class="numbertext">2 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Two</div>
+                    <div class="numbertext">2 / 4</div>
+                    <div class="slide">
+                        <h1 class="text-center">SOCIAL ENGINEERING<br /></h1>
+                        <h1 class="text-center">Who can it affect?</h1>
+                        <h1 class="text-center scary">ANYONE...</h1>
+                    </div>
                 </div>
 
                 <div class="mySlides faded">
-                    <div class="numbertext">3 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
+                    <div class="numbertext">3 / 4</div>
+                    <div class="slide">
+                        <h1 class="text-center">SOCIAL ENGINEERING<br /></h1>
+                        <h2 class="text-center">Examples and Red Flags</h2>
+                        <div class="info"></div>
+                    </div>
+                </div>
+
+                <div class="mySlides faded">
+                    <div class="numbertext">4 / 4</div>
+                    <div class="slide">
+                        <h1 class="text-center">SOCIAL ENGINEERING<br /></h1>
+                        <h1 class="text-center">How can we prevent this?<br /><br /></h1>
+                        <ul>
+                            <li class="size margin">
+                                Identify awareness
+                            </li>
+                            <li class="size margin">
+                                Better awareness programs
+                            </li>
+                            <li class="size margin">
+                                Better security culture, training program
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -126,6 +167,7 @@
                 <span class="dot" onclick="currentSlide(1)"></span>
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
             </div>
         </div>
         <div class="info" id="softHard">
@@ -148,7 +190,6 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="text">Caption Text</div>
                 </div>
 
                 <div class="mySlides faded">
