changed some text

--- a/systemharden.html
+++ b/systemharden.html
@@ -124,7 +124,7 @@
                     <div class="numbertext">2 / 4</div>
                     <div class="slide">
                         <h1 class="text-center">SOCIAL ENGINEERING<br /></h1>
-                        <h1 class="text-center">Who can it affect?</h1>
+                        <h1 class="text-center">Who are these people?</h1>
                         <h1 class="text-center scary">ANYONE...</h1>
                     </div>
                 </div>
@@ -393,12 +393,6 @@
                             </li>
                         </ul>
                     </div>
-                </div>
-
-                <div class="mySlides faded">
-                    <div class="numbertext">3 / 3</div>
-                    <img src="img/cybersecu.jpg" style="width:100%">
-                    <div class="text">Caption Three</div>
                 </div>
 
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
