changed some text

--- a/systemharden.html
+++ b/systemharden.html
@@ -457,7 +457,7 @@
                 <div class="mySlides faded">
                     <div class="numbertext">4 / 4</div>
                     <div class="questions"><h1 class="text-center">QUESTIONS?</h1></div>
-                    <img src="img/cybersecu.jpg" class="center">
+                    <img src="img/cybersecu.jpg" class="center2">
                 </div>
 
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
