social engineering, duh

--- a/systemharden.html
+++ b/systemharden.html
@@ -59,7 +59,7 @@
         <section id="start">
             <div class="image2" id="info">
                 <div class="slide">
-                    <h1 class="text-center">Welcome to our presention about system hardening.</h1>
+                    <h1 class="text-center">Welcome to our presention about social engineering.</h1>
                     <h2 class="text-center">Please enjoy</h2>
                     <img src="img/cybersecu.jpg" class="center">
                 </div>
