--- a/systemharden.html
+++ b/systemharden.html
@@ -96,7 +96,7 @@
 
                 <div class="mySlides faded">
                     <div class="numbertext">2 / 2</div>
-                    <div><h1 class="text-center"><a href="https://www.youtube.com/watch?v=opRMrEfAIiI">What's your password?</a></h1></div>
+                    <div><h1 class="text-center"><a href="https://www.youtube.com/watch?v=opRMrEfAIiI" target="_blank">What's your password?</a></h1></div>
                 </div>
 
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
