changed to html so I cah host on github

--- a/animations.html
+++ b/animations.html
@@ -19,7 +19,7 @@
             <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <a href="website.html">Home</a>
-                    <a href="registration.php">Registration</a>
+                    <a href="registration.html">Registration</a>
                     <a href="animations.html">Animations<br/>(seizure warning)</a>
                     <a href="http://www.patience-is-a-virtue.org/" target="_blank">Get out</a>                    
             </div>
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 hideMenu regimg" id="animationsmenuuniqueidbecauseijustneedsomany">
                     <a href="website.html" id="anotherjustsuperuniqueidbecauseifyouweretointerprettheinstructionsforthisprojectliterallythenthisistheresult">Home</a><br/>
-                    <a href="registration.php" id="jesuschristarentalloftheseidsarejustsounique">Registration</a><br/>
+                    <a href="registration.html" id="jesuschristarentalloftheseidsarejustsounique">Registration</a><br/>
                     <a href="animations.html" id="areidsreallysomuchbetterthanclasses">Animations<br/>(seizure warning)</a><br/>
                     <a href="http://www.patience-is-a-virtue.org/" target="_blank" id="loldoyoulikemyreallycooljoke">Get out</a><br/>
             
