--- a/website.html
+++ b/website.html
@@ -20,7 +20,7 @@
             <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" id="howmanyuniqueidattributesistoomanyuniqueidattributes">&times;</a>
                     <a href="website.html" id="gotothehomepageofhtiswebsite">Home</a>
-                    <a href="registration.php" id="ifyoulikemyuniqueidattributesyoulllovemypasswords">Registration</a>
+                    <a href="registration.html" id="ifyoulikemyuniqueidattributesyoulllovemypasswords">Registration</a>
                     <a href="animations.html" id="youllneverbruteforcemypasswords">Animations<br/>(seizure warning)</a>
                     <a href="http://www.patience-is-a-virtue.org/" target="_blank" id="myjokeherecannotbetopped">Get out</a>                    
             </div>
@@ -40,7 +40,7 @@
         <div class="row full" id="thehomepagemenU">
             <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 hideMenu" id="ImreallyproudofthewayIhidthemenuataspecificsize">
                 <a href="website.html" id="homepagehomelink">Home</a><br/>
-                <a href="registration.php" id="homepageregistrationpagelink">Registration</a><br/>
+                <a href="registration.html" id="homepageregistrationpagelink">Registration</a><br/>
                 <a href="animations.html" id="gettothatanimationspagefromthehompage">Animations<br/>(seizure warning)</a><br/>
                 <a href="http://www.patience-is-a-virtue.org/" target="_blank" id="illbetyoucantfigureoutwhenIreallystoppedbeingabletothinkoflegitimateidattributesanddoubleddownonthisjoke">Get out</a><br/>
             </div>
