small fixes to make the javascript work and some image issues

--- a/registration.html
+++ b/registration.html
@@ -51,7 +51,7 @@
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" id="formtablecolumnthefirst">
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="formtablecolumn">
                 <table align="center" id="formstable">
-					<form method="POST" action="" id="myForm" >
+					<form method="POST" action="form1.html" id="myForm" >
 					<tr>
 						<td>
 					     <label for="userName" id="userName">User Name:</label>
