gotta use that get method, guh

--- a/registration.html
+++ b/registration.html
@@ -43,7 +43,7 @@
     <div class="row" id="formtablerow">
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 hideMenu regimg">
                 <a href="website.html" id="tehhomepage">Home</a><br/>
-                <a href="registration.php" id="registrationpage">Registration</a><br/>
+                <a href="registration.html" id="registrationpage">Registration</a><br/>
                 <a href="animations.html" id="animationspage">Animations<br/>(seizure warning)</a><br/>
                 <a href="http://www.patience-is-a-virtue.org/" target="_blank">Get out</a><br/>
         
@@ -51,7 +51,7 @@
         <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" id="formtablecolumnthefirst">
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="formtablecolumn">
                 <table align="center" id="formstable">
-					<form method="POST" action="form1.html" id="myForm" >
+					<form method="GET" action="form1.html" id="myForm" >
 					<tr>
 						<td>
 					     <label for="userName" id="userName">User Name:</label>
