making sure everything is html

--- a/form1.html
+++ b/form1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="us_EN">
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
             <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()" id="howmanyuniqueidattributesistoomanyuniqueidattributes">&times;</a>
                     <a href="website.html" id="gotothehomepageofhtiswebsite">Home</a>
-                    <a href="registration.php" id="ifyoulikemyuniqueidattributesyoulllovemypasswords">Registration</a>
+                    <a href="registration.html" id="ifyoulikemyuniqueidattributesyoulllovemypasswords">Registration</a>
                     <a href="animations.html" id="youllneverbruteforcemypasswords">Animations<br/>(seizure warning)</a>
                     <a href="http://www.patience-is-a-virtue.org/" target="_blank" id="myjokeherecannotbetopped">Get out</a>                    
             </div>
@@ -32,7 +32,7 @@
 		<div class="row newsBoxImg" id="">
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 hideMenu regimg divsize">
 				 <a href="website.html" id="tehhomepage">Home</a><br/>
-				 <a href="registration.php" id="registrationpage">Registration</a><br/>
+				 <a href="registration.html" id="registrationpage">Registration</a><br/>
 				 <a href="animations.html" id="animationspage">Animations<br/>(seizure warning)</a><br/>
 				 <a href="http://www.patience-is-a-virtue.org/" target="_blank">Get out</a><br/>
     		</div>
