--- a/registration.html
+++ b/registration.html
@@ -21,7 +21,7 @@
         <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                 <a href="website.html" id="id1">Home</a>
-                <a href="registration.php" id="id2">Registration</a>
+                <a href="registration.html" id="id2">Registration</a>
                 <a href="animations.html" id="id3">Animations<br/>(seisure warning)</a>
                 <a href="http://www.patience-is-a-virtue.org/" target="_blank" id="id4">Get out</a>
                 
